#14524, fixed a word wrap bug on workitem pages

--- a/css/workitem.css
+++ b/css/workitem.css
@@ -614,7 +614,7 @@
     margin:0;
     margin-top:8px;
     padding-right:5px;
-
+    word-wrap: break-word;
 }
 #for_view li .notestext a, .comment a {
     color: rgb(0, 118, 252);
